# song-vault

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  compose.yml  initial-feedback.md  pyproject.toml  skills-lock.json
.codex/: README.md  config.toml
.github/workflows/: ci.yml  docker-publish.yml
.scratch/backup-manifest-restore-module/: PRD.md
.scratch/chart-preview-feedback/: PRD.md
.scratch/chart-upload-workflow-module/: PRD.md
.scratch/handler-runtime-context-seam/: PRD.md
.scratch/song-metadata-module/: PRD.md
alembic/: env.py
alembic/versions/: 20260329_0001_create_songs_table.py  20260401_0002_create_song_charts_table.py  20260403_0003_add_song_metadata_fields.py  20260404_0004_split_song_artist_and_source_url.py
docs/: architecture.md  mvp.md
docs/features/: README.md  button-navigation-cleanup.md  dockerhub-publish-pipeline.md  menu-label-alias-routing.md  song-artist-source-url-split.md  start-command-recovery-and-copy-fixes.md  ukrainian-localization.md
docs/prds/: prd-song-browser-navigation-state-module.md
src/: app.py
src/bot/: application.py  runtime.py
src/db/: session.py
src/handlers/: backup.py  charts.py  common.py  conversation.py  messages.py  navigation.py  repertoire.py  ui.py
tests/: conftest.py  test_application.py  test_chart_service.py  test_handler_conversation_helpers.py  test_handlers.py  test_model_enums.py  test_navigation.py  test_postgres_integration.py  test_repertoire_backup_service.py  test_settings.py  test_song_service.py
(+30 files in other folders)
